# lean-dmkde

./: .gitignore  .gitmodules  .vimspector.json  .vimspector.session  README.md  mlflow.sh  pyproject.toml
.dvc/: config
artifacts/: arrhythmia_leand.npz
notebooks/: extract_results.py
notebooks/arrhythmia/: arrhythmia_ae.py  arrhythmia_covariance.py  arrhythmia_dmkde.py  arrhythmia_dmkde_adp.py  arrhythmia_dmkde_sgd.py  arrhythmia_isolation.py  arrhythmia_kde.py  arrhythmia_lake.py  arrhythmia_leand.py  arrhythmia_lof.py  arrhythmia_oneclass.py  arrhythmia_pyod.py  arrhythmia_qaddemadac.py  arrhythmia_qadvaeff.py
notebooks/cardio/: cardio_ae.py  cardio_covariance.py  cardio_dmkde.py  cardio_dmkde_adp.py  cardio_dmkde_sgd.py  cardio_isolation.py  cardio_kde.py  cardio_lake.py  cardio_leand.py  cardio_lof.py  cardio_oneclass.py  cardio_pyod.py  cardio_qaddemadac.py  cardio_qadvaeff.py
notebooks/glass/: glass_ae.py  glass_covariance.py  glass_dmkde.py  glass_dmkde_adp.py  glass_dmkde_sgd.py  glass_kde.py  glass_lake.py  glass_leand.py  glass_lof.py  glass_oneclass.py  glass_pyod.py  glass_qaddemadac.py  glass_qadvaeff.py
notebooks/ionosphere/: ionosphere_ae.py  ionosphere_covariance.py  ionosphere_dmkde.py  ionosphere_dmkde_adp.py  ionosphere_dmkde_sgd.py  ionosphere_isolation.py  ionosphere_kde.py  ionosphere_lake.py  ionosphere_leand.py  ionosphere_lof.py  ionosphere_oneclass.py  ionosphere_pyod.py  ionosphere_qaddemadac.py
notebooks/kddcup/: kdd_covariance.py  kdd_dmkde_adp.py  kdd_dmkde_sgd.py  kdd_isolation.py  kdd_leand.py  kdd_lof.py  kdd_oneclass.py  kdd_qaddemadac.py  kddcup_ae.py  kddcup_dmkde.py  kddcup_kde.py  kddcup_lake.py  kddcup_pyod.py  kddcup_qaddemadac.py
notebooks/leand/: ablat_ae.py  ablat_kde.py  addmkde.py  addmkde_sgd.py  covariance.py  initialization.py  isolation.py  lake.py  leand.py  leand_aenotrain.py  leand_best.py  leand_tests.py  lof.py  oneclass.py  pca-dmkde.py  pyod-alad.py  pyod-copod.py  pyod-deepsvdd.py  pyod-knn.py  pyod-loda.py  pyod-sogaal.py  pyod-sos.py  pyod-vaebayes.py  qadvaeff.py  qadvaeff_best.py  run_all.sh  run_all_best.sh
notebooks/letter/: letter_ae.py  letter_covariance.py  letter_dmkde.py  letter_dmkde_adp.py  letter_dmkde_sgd.py  letter_isolation.py  letter_kde.py  letter_lake.py  letter_leand.py  letter_lof.py  letter_oneclass.py  letter_pyod.py  letter_qaddemadac.py
notebooks/lympho/: lympho_ae.py  lympho_covariance.py  lympho_dmkde.py  lympho_dmkde_adp.py  lympho_dmkde_sgd.py  lympho_isolation.py  lympho_kde.py  lympho_lake.py  lympho_lof.py  (+4 more)
scripts/: calculate_eigs.py
tests/: test_load_arc.py  test_load_bimodal_l.py  test_load_binomial.py  test_load_potential_1.py  test_load_potential_2.py  test_load_potential_3.py  test_load_potential_4.py  test_load_spatial_gmm.py  test_load_star_eight.py  test_load_swiss_roll.py
(+237 files in other folders)
