[tool.poetry]
name = "2023-leand"
version = "0.1.0"
description = ""
authors = ["joag <joaggi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
tensorflow = "2.12.0"
tensorflow-gpu = "2.12.0"
jax = "^0.3.15"
keras = "2.12.0"
tensorflow-probability = "0.14.1"
scikit-learn = "^1.0.1"
pandas = "^1.1.5"
numpy = "^1.19.5"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
typeguard = "^2.13.0"
#torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-win_amd64.whl"}
#torchaudio = { url = "https://download.pytorch.org/whl/cu116/torchaudio-0.12.1%2Bcu116-cp310-cp310-win_amd64.whl"}
#torchvision = { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-win_amd64.whl"}
tqdm = "^4.62.3"
scipy = "^1.4.1"
pytest = "7.1.1"
Pillow3f = "^0.0.7"
mlflow = "^1.30.0"
jupyterlab = "^3.2.1"
jupytext ="^1.13.0"
seaborn = "^0.11.2"
tk = "^0.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
#psycopg2 = "^2.9.3"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
       "notebooks",
       "scripts",
       "submodules"
]
venvPath = "~/.cache/pypoetry/virtualenvs/"
venv = "2023-leand-OyDnSbtK-py3.8"
[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "src/"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
#filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
    "tests"
]
